1. fix for the white space / brreak line issue in item.description 2. fixed the max width of the artist / charity images to 450px 3. switched off the charity 'find out more' button - will reinstate when sort out the content alignment

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -191,3 +191,7 @@ body a:hover {
 .filter-black {
   filter: invert(100%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
 }
+.text-description {
+  font-size: 1.4rem;
+  font-family: 'Baloo Bhaina 2';
+}
